kubernetes/apps/prod/nas/zerobyte/endpoint.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: zerobyte
  namespace: nas
subsets:
  - addresses:
      - ip: ${ZEROBYTE_IP}
    ports:
      - name: http
        port: 4096
