kubernetes/apps/prod/nas/zerobyte/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: zerobyte
  namespace: nas
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 4096
      targetPort: 4096
